# meta-facts

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-server.yaml
app/: main.py
app/api/api_v1/routers/: meta_data.py
app/core/: config.py
app/models/: enums.py  meta_data.py  s3_urls.py
app/utils/: columns_mapping.py  common.py  dependency.py  formats_available.py  granularity.py  is_public.py  meta_data.py  output_file_name.py  s3_files.py  spatial_coverage.py  temporal_coverage.py  units.py
data-tests/: country_state_mult_dist.csv  country_with_mul_state.csv  mul_country.csv  overall_india.csv  overall_state.csv
