[tool.poetry]
name = "meta-facts"
version = "0.1.0"
description = "Automatic generation of Meta-Data for a dataset"
authors = ["Your address email (you@example.com)"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
joblib = "^0.15.1"
python-dotenv = "^0.19.2"
pandas = "^1.3.5"
asyncio = "^3.4.3"
python-multipart = "^0.0.5"
boto3 = "^1.24.7"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .eggs
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
